<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_Operator" Id="{439ddead-23ef-48ff-9ca1-f49f1114f44c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Operator :
(
	idle_operator := 0,
	sum_operator,
	diff_operator,
	mul_operator,
	ratio_operator
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>