<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="Parameter" Id="{1deb642a-e22c-483f-adf9-8ac429db7de2}">
    <Declaration><![CDATA[TYPE Parameter :
STRUCT
	Value : REAL;				//Value to input
	StoredValue : REAL;			//Value to store data if it is valid
	Minimun, Maximun : REAL;	//Min/Max valid range
	nDecpt : INT;				//Number of decimal digit
	Description : STRING;		//Parameter description
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>