<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="MAIN" Id="{5a7f3348-1a83-45b6-b2c9-8e76ac5cc7b6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	bInit: BOOL;
	i: INT;
	j: INT;
	
	// FB Instances
	Base : FB_Base;			//Base FB
	ExtBase : FB_ExtBase;	//Extended FB	
	op : E_Operator;
	
	// Trend Line Chart //
	bStart: BOOL;
	plotSin: REAL;
	nVal: REAL;
	nVal2: INT;
	LineWidth1 : INT;
	LineWidth2 : INT;
	/////////////////////
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit = FALSE THEN
	bInit := TRUE;
	Parameters.rParameter01.Description := 'parametro 1';
	Parameters.rParameter01.Maximun := 1000;
	Parameters.rParameter01.Minimun := -1000;
	Parameters.rParameter01.nDecpt := 2;
	
	Parameters.rParameter02.Description := 'parametro 2';
	Parameters.rParameter02.Maximun := 1000;
	Parameters.rParameter02.Minimun := 0;
	Parameters.rParameter02.nDecpt := 2;
	
	Parameters.rParameter03.Description := 'parametro 3';
	Parameters.rParameter03.Maximun := 1000;
	Parameters.rParameter03.Minimun := -1000;
	Parameters.rParameter03.nDecpt := 2;
	
	Parameters.rParameter04.Description := 'parametro 4';
	Parameters.rParameter04.Maximun := 10;
	Parameters.rParameter04.Minimun := -5;
	Parameters.rParameter04.nDecpt := 2;
	
	Parameters.rParameter05.Description := 'parametro 5';
	Parameters.rParameter05.Maximun := 1000;
	Parameters.rParameter05.Minimun := -1000;
	Parameters.rParameter05.nDecpt := 4;
	
	Parameters.rParameter06.Description := 'parametro 6';
	Parameters.rParameter06.Maximun := 123;
	Parameters.rParameter06.Minimun := -1;
	Parameters.rParameter06.nDecpt := 2;
	
	Parameters.rParameter07.Description := 'parametro 7';
	Parameters.rParameter07.Maximun := 1000;
	Parameters.rParameter07.Minimun := -1000;
	Parameters.rParameter07.nDecpt := 3;
	
	Parameters.rParameter08.Description := 'parametro 8';
	Parameters.rParameter08.Maximun := 1000;
	Parameters.rParameter08.Minimun := -1000;
	Parameters.rParameter08.nDecpt := 2;
	FOR i := 0 TO 9 DO
		GVL.arrReal[i] := i;
		GVL.arrStruct[i].A := i;
		GVL.arrStruct[i].B := i;
		GVL.arrStruct[i].C := i;
		GVL.arrStruct[i].Value := i;
		GVL.arrStruct[i].Descr := INT_TO_STRING(i);
		
		Parameters.aParameters[i].Description := Concat('Parametro', INT_TO_STRING(i));
		Parameters.aParameters[i].Value := i;
		Parameters.aParameters[i].StoredValue := i;
		Parameters.aParameters[i].Maximun := 1000;
		Parameters.aParameters[i].Minimun := -10;
	END_FOR	
END_IF

MAIN_1();

// Trend Line Chart //
IF bStart THEN
	nVal := nVal+ 0.01;
	IF (nVal > (2*pi)) THEN //IF (nVal > (8*pi)) THEN 
		nVal := 0;
	END_IF
	plotSin := SIN(nVal); // plotSin := SIN(0.25*nVal);
	nVal2 := nVal2 + 1;
	IF nVal2 > 90 THEN
		nVal2 := 0;
	END_IF
END_IF
/////////////////////]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="9" Count="4" />
      <LineId Id="15" Count="4" />
      <LineId Id="24" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="25" Count="3" />
      <LineId Id="14" Count="0" />
      <LineId Id="30" Count="3" />
      <LineId Id="29" Count="0" />
      <LineId Id="35" Count="3" />
      <LineId Id="34" Count="0" />
      <LineId Id="40" Count="3" />
      <LineId Id="39" Count="0" />
      <LineId Id="45" Count="3" />
      <LineId Id="44" Count="0" />
      <LineId Id="54" Count="6" />
      <LineId Id="66" Count="2" />
      <LineId Id="83" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="53" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="113" Count="12" />
      <LineId Id="91" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>